Improves prompts for classroom experience and speech text generation.

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
         <h2>Welcome to the AI-based Teacher Assistant Application</h2>
         <p>This application is a collaborative effort developed for the Wizeline bootcamp. 
           It is designed to facilitate educational content creation, making it easier for teachers to design and deliver effective classroom experiences. 
-          This innovative tool is the brainchild of Ivan Cabezas and LAI models, combining expertise in education and advanced AI capabilities. </p>
+          This innovative tool is the brainchild of Ivan Cabezas and AI models, combining expertise in education and advanced AI capabilities. </p>
 
 
        {% include 'formHome.html' %}
