Improves variables namming

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,3 +1,3 @@
 <footer>
-    <p>© 2023 <a href="https://www.linkedin.com/in/ivanmcabezas/" target="_blank">Ivan Cabezas</a> (supported by AI tools and models). Developed for the Wizeline Bootcamp.</p>
+    <p>© 2023 <a href="https://www.linkedin.com/in/ivanmcabezas/" target="_blank">Ivan Cabezas</a> (supported by AI tools and models). Developed for the Wizeline Academy: ChatGPT Developers Sprint</p>
 </footer>
