Fixes issues with HTML form names

--- a/templates/formHome.html
+++ b/templates/formHome.html
@@ -13,7 +13,7 @@
 
     <div id="advancedFeatures" style="display: none;">
 
-      <label for="format">Choose an audio voice:</label>
+      <label for="audioVoice">Choose an audio voice:</label>
       <select id="audioVoice" name="audioVoice">        
             <option value="alloy">alloy</option>
             <option value="echo">echo</option>
@@ -23,7 +23,7 @@
             <option value="shimmer">shimmer</option>        
       </select><br><br>
 
-      <label for="model">Choose a text model:</label>
+      <label for="textModel">Choose a text model:</label>
       <select id="textModel" name="textModel">          
           <option value="gpt-3.5-turbo">gpt-3.5-turbo</option>
           <option value="gpt-3.5-turbo-1106">gpt-3.5-turbo-1106</option>
@@ -31,6 +31,10 @@
           <option value="gpt-4">gpt-4</option>
       </select><br><br>
 
+ 
+        
+        
+      
 
     </div>
   <a href="#" onclick="toggleAdvancedFeatures()" class="advanced-features-link">Models Features</a>
